Booking Management System: Fix timezone shifts and improve capacity validation messages