@@ -5,8 +5,11 @@ import org.springframework.stereotype.Service;
 import com.smartcampus.model.*;
 import com.smartcampus.repository.BookingRepository;
 import java.time.Instant;
+import java.time.LocalDate;
+import java.time.LocalTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class BookingService {
@@ -30,19 +33,27 @@ public class BookingService {
         // Validation: Attendee count rule for equipment
         if (resource.getType() == ResourceType.EQUIPMENT) {
             booking.setAttendeeCount(null); // Equipment doesn't need attendee count
-        } else if (booking.getAttendeeCount() == null || booking.getAttendeeCount() <= 0) {
-            throw new RuntimeException("Expected number of attendees is required for this facility");
+        } else {
+            if (booking.getAttendeeCount() == null || booking.getAttendeeCount() <= 0) {
+                throw new RuntimeException("Expected number of attendees is required for this facility");
+            }
+            // Strict Capacity Check
+            if (booking.getAttendeeCount() > resource.getCapacity()) {
+                throw new RuntimeException("Capacity exceeded! This resource only has " + resource.getCapacity() + " seats.");
+            }
         }
 
         // Validation: End time must be after Start time
-        if (booking.getEndTime().isBefore(booking.getStartTime()) || booking.getEndTime().equals(booking.getStartTime())) {
+        LocalTime start = booking.getLocalStartTime();
+        LocalTime end = booking.getLocalEndTime();
+        if (end.isBefore(start) || end.equals(start)) {
             throw new RuntimeException("End time must be after the start time.");
         }
 
-        // 2. Prevent overlapping bookings
-        boolean hasOverlap = checkOverlap(booking);
-        if (hasOverlap) {
-            throw new RuntimeException("The selected time slot is already booked for this resource.");
+        // 2. Prevent overlapping bookings based on capacity
+        String conflictMsg = checkCapacityConflicts(booking, resource);
+        if (conflictMsg != null) {
+            throw new RuntimeException(conflictMsg);
         }
 
         // 3. Set metadata
@@ -54,49 +65,60 @@ public class BookingService {
         return bookingRepository.save(booking);
     }
 
-    private boolean checkOverlap(Booking newBooking) {
-        Resource resource = resourceService.getResourceById(newBooking.getResourceId()).orElse(null);
-        if (resource == null) return false;
-
+    /**
+     * Checks if the new booking exceeds the resource's capacity at any point in its time range.
+     * Returns an error message if there's a conflict, or null if it's safe to book.
+     */
+    private String checkCapacityConflicts(Booking newBooking, Resource resource) {
         int capacity = resource.getCapacity();
         int newAttendees = (newBooking.getAttendeeCount() != null) ? newBooking.getAttendeeCount() : 1;
+        LocalTime newStart = newBooking.getLocalStartTime();
+        LocalTime newEnd = newBooking.getLocalEndTime();
 
-        // 1. Get all relevant bookings (Approved or Pending)
+        // 1. Get all relevant bookings (Approved or Pending) for the same resource and date
         List<Booking> existing = bookingRepository.findByResourceIdAndDateAndStatusNot(
                 newBooking.getResourceId(), newBooking.getDate(), BookingStatus.REJECTED);
 
-        // 2. We only care about bookings that actually overlap with our new time range
+        // 2. Filter for those that overlap in time and are not cancelled
         List<Booking> overlaps = existing.stream()
                 .filter(b -> b.getStatus() != BookingStatus.CANCELLED)
-                .filter(b -> b.getStartTime().isBefore(newBooking.getEndTime()) && b.getEndTime().isAfter(newBooking.getStartTime()))
-                .toList();
+                .filter(b -> {
+                    LocalTime bStart = b.getLocalStartTime();
+                    LocalTime bEnd = b.getLocalEndTime();
+                    return bStart.isBefore(newEnd) && bEnd.isAfter(newStart);
+                })
+                .collect(Collectors.toList());
 
-        // 3. Check every "Change Point" (whenever a booking starts or ends)
-        // If the occupancy + our new attendees > capacity at any point, then it's a conflict.
-        java.util.Set<java.time.LocalTime> checkPoints = new java.util.HashSet<>();
-        checkPoints.add(newBooking.getStartTime());
+        // 3. Check occupancy at all "critical time points" within the new booking's range
+        java.util.Set<LocalTime> criticalPoints = new java.util.HashSet<>();
+        criticalPoints.add(newStart);
         for (Booking b : overlaps) {
-            checkPoints.add(b.getStartTime());
+            criticalPoints.add(b.getLocalStartTime());
         }
 
-        for (java.time.LocalTime time : checkPoints) {
+        for (LocalTime time : criticalPoints) {
             // Only check points that fall within our new booking's window
-            if (!time.isBefore(newBooking.getStartTime()) && time.isBefore(newBooking.getEndTime())) {
-                int occupancyAtTime = getOccupancyAt(time, overlaps);
-                if (occupancyAtTime + newAttendees > capacity) {
-                    return true;
+            if (!time.isBefore(newStart) && time.isBefore(newEnd)) {
+                int occupancy = 0;
+                for (Booking b : overlaps) {
+                    LocalTime bStart = b.getLocalStartTime();
+                    LocalTime bEnd = b.getLocalEndTime();
+                    if (!time.isBefore(bStart) && time.isBefore(bEnd)) {
+                        occupancy += (b.getAttendeeCount() != null) ? b.getAttendeeCount() : 1;
+                    }
+                }
+
+                if (occupancy + newAttendees > capacity) {
+                    if (occupancy > 0) {
+                        return "Capacity exceeded! Only " + (capacity - occupancy) + " seats available during this time slot.";
+                    } else {
+                        return "Capacity exceeded! This resource only has " + capacity + " seats.";
+                    }
                 }
             }
         }
 
-        return newAttendees > capacity;
-    }
-
-    private int getOccupancyAt(java.time.LocalTime time, List<Booking> overlaps) {
-        return overlaps.stream()
-                .filter(b -> !time.isBefore(b.getStartTime()) && time.isBefore(b.getEndTime()))
-                .mapToInt(b -> (b.getAttendeeCount() != null) ? b.getAttendeeCount() : 1)
-                .sum();
+        return null;
     }
 
     public Booking cancelBooking(String id, String userId) {
@@ -111,14 +133,14 @@ public class BookingService {
 
         // Check if the booking has already started
         java.time.LocalDateTime now = java.time.LocalDateTime.now();
-        java.time.LocalDateTime bookingStart = java.time.LocalDateTime.of(booking.getDate(), booking.getStartTime());
+        java.time.LocalDateTime bookingStart = java.time.LocalDateTime.of(booking.getLocalDate(), booking.getLocalStartTime());
 
         if (now.isAfter(bookingStart)) {
             throw new RuntimeException("Cannot cancel a booking that has already started");
         }
 
         bookingRepository.deleteById(id);
-        return null; // Return null or a dummy object as it's deleted
+        return null; 
     }
 
     public List<Booking> getAllBookings() {
